--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -62,7 +62,7 @@
                     Loaded!
                 </h1>
                 <p>
-                    QUICK APPLICATION SYSTEM - <span class="appName" style="font-style:italic">quick</span><span class="appName">App</span> &copy; <a href="https://www.ebenmonney.com">WWW.EBENMONNEY.COM</a>
+                    Codding Challenges - <span class="appName" style="font-style:italic">Codding</span><span class="appName">Challenges</span> &copy; <a href="www.itmb.com.au">www.itmb.com.au</a>
                 </p>
 
             </div>
@@ -78,9 +78,9 @@
                     <footer>
                         <div class="app-component vcenter_text center-block">
                             <p class="text-center text-muted">
-                                <span class="appName" style="font-style:italic">quick</span><span class="appName">App</span> &copy; {{getYear()}}
-                                <a href="https://www.ebenmonney.com" target="_blank">www.ebenmonney.com</a>
-                                <!--<span class="small display-none">- Powered by <a href="https://www.ebenmonney.com/quickapp" target="_blank"><span class="appName" style="font-style:italic">quick</span><span class="appName">App</span></a></span>-->
+                                <span class="appName" style="font-style:italic">Codding</span><span class="appName">Challenges</span> &copy; {{getYear()}}
+                                <a href="https://www.itmb.com.au" target="_blank">www.itmb.com.au</a>
+                                <!--<span class="small display-none">- Powered by <a href="www.itmb.com.au" target="_blank"><span class="appName" style="font-style:italic">quick</span><span class="appName">App</span></a></span>-->
                             </p>
                         </div>
                     </footer>
